Fix fullscreen overflow

--- a/public/components/workpad/workpad.less
+++ b/public/components/workpad/workpad.less
@@ -1,6 +1,10 @@
 .canvas__workpad {
   box-shadow: 0px 0px 7px 0px rgba(0,0,0,0.2);
   position: relative;
+
+  &.fullscreen {
+    overflow: hidden;
+  }
 }
 
 // For some bizarre reason, you must repeat the styles in their own blocks or they won’t be applied
